white space fix

--- a/wordpress/build-files/scss/_interior-story-box.scss
+++ b/wordpress/build-files/scss/_interior-story-box.scss
@@ -1,5 +1,5 @@
 .interior-story {
-	padding: 140px 0;
+	padding: 30px 0;
 }
 
 // 768px
